Fixed wrong positioned tooltip
- Used already existing ID for tooltip in the options panel to give different styling for it.
- Corrected changed styling that caused issue after merge for tooltip in the toolbar .

--- a/DuggaSys/diagram.css
+++ b/DuggaSys/diagram.css
@@ -337,10 +337,9 @@
 
 /*tooltip*/
 
-
 .toolTipText{
     top:-5px;
-    left: 9.5%;
+    left: 132%;
     visibility: hidden;
     width: 250px;
     background: rgba(0, 0, 0, 0.8);
@@ -353,9 +352,12 @@
     z-index: 2;
 }
 
-
 .diagramIcons:hover .toolTipText{
     visibility: visible;
+}
+
+#tooltip-OPTIONS{
+    left: 9.5%;
 }
 
 .colorMenu{
